# QAnalogClock

./: CMakeLists.txt  README.md  analogclock.cpp
